Add hospitality option
